--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -75,4 +75,6 @@
 			    }
 
 			</script>
+      <script type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
+      </script>
 {% endblock %}
