--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -50,4 +50,6 @@
 			    }
 
 			</script>
+			<script type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
+			</script>
 {% endblock %}
