--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -4,7 +4,7 @@
   <div id="mapwin" class="innertube">
 			<h1>elecTrek - The Canvassing App</h1>
       <h1>Welcome to your dashboard, {{ session['username'] }}</h1>
-    <embed src="{{ context.mapfile }}" width="1200" height="800"> </embed>
+    <iframe src="{{ context.mapfile }}" width="1200" height="800" name="_top"> </iframe>
 	</div>
 
 			<div id="nav" class="innertube">
