--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body%}
-
+<base target="_parent">
   <div id="mapwin" class="innertube">
 			<h1>elecTrek - The Canvassing App</h1>
       <h1>Welcome to your dashboard, {{ session['username'] }}</h1>
