--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -29,6 +29,9 @@
 
 			</div>
 			<div id="datawin" class="innertube">
+        <button id="message_button"  </button>
+        <p id="results"  </p>
+
 				<h1>elecTrek - flash messages</h1>
 				{% with messages = get_flashed_messages() %}
 				{% if messages %}
