--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="datawin" class="innertube">
         <button id="message_button"  </button>
-        <p id="results"  </p>
+        <p id="results">  </p>
 
 				<h1>elecTrek - flash messages</h1>
 				{% with messages = get_flashed_messages() %}
