--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -29,7 +29,7 @@
 
 			</div>
 			<div id="datawin" class="innertube">
-        <button id="message_button"  </button>
+        <button id="message_button" > </button>
         <p id="results">  </p>
 
 				<h1>elecTrek - flash messages</h1>
