--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -78,5 +78,7 @@
 
 
 			</script>
+      <script type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
+      </script>
 
 {% endblock %}
