--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -34,7 +34,7 @@
 				{% if messages %}
 					<ul class="flashes" >
 					{% for message in messages %}
-						<li>{{ session['username'] }} , {{ message }}</li>
+						<li> {{ message }}</li>
 					{% endfor %}
 					</ul>
 				{% endif %}
