--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -8,6 +8,11 @@
 	</div>
 
 			<div id="nav" class="innertube">
+    
+        <h1>Map Data </h1>
+        {% for x,y in context.formdata.items() %}
+        		<ul> {{ x }} : {{ y }} </ul>
+        {% endfor %}
 
 			<h2>Generate Walks</h2>
 
