--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -32,11 +32,11 @@
 			</div>
 			<div id="datawin" class="innertube">
 				<h1>elecTrek - flash messages</h1>
-				{% with messages = get_flashed_messages()|tojson|safe %}
+				{% with messages = get_flashed_messages() %}
 				{% if messages %}
 					<ul class="flashes" >
-					{% for message in messages %}
-						<li> {{ message }}</li>
+          {% for message in messages|tojson|safe %}
+						<li> {{ message  }}</li>
 					{% endfor %}
 					</ul>
 				{% endif %}
