--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -35,7 +35,7 @@
 				{% with messages = get_flashed_messages() %}
 				{% if messages %}
 					<ul class="flashes" >
-          {% for message in messages|tojson|safe %}
+          {% for message in messages %}
 						<li> {{ message  }}</li>
 					{% endfor %}
 					</ul>
