--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -76,9 +76,30 @@
                 };
 			    };
 
+          // addEventListener support for IE8
+          // Listen to message from child window
+          const pessages = [];
+          var pack = JSON.parse('{{ messages|tojson|safe }}');
+
+          for (let x in pack) {
+            pessages.push(pack[x]);
+          }
+
+          var iframeEl = document.getElementsByName('iframe1');
+
+          function bindEvent( element, eventName, eventHandler) {
+             if (element.addEventListener){
+                 element.addEventListener(eventName, eventHandler, false);
+             } else if (element.attachEvent) {
+                 element.attachEvent('on' + eventName, eventHandler);
+             };
+          };
+
+          bindEvent( window, 'message', function (e) {
+              pessages.push(e.data);
+              alert("_____blink:"+pessages);
+          });
 
 			</script>
-      <script type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
-      </script>
 
 {% endblock %}
