--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -79,7 +79,7 @@
           // addEventListener support for IE8
           // Listen to message from child window
           const pessages = [];
-          var pack = JSON.parse('{{ messages|tojson|safe }}');
+          var pack = JSON.parse('{{ get_flashed_messages()|tojson|safe }}');
 
           for (let x in pack) {
             pessages.push(pack[x]);
