--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block body%}
-<script>
-  type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
+<script  type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
 </script>
 <base target="_self">
   <div id="mapwin" class="innertube">
