--- a/templates/Dash2.html
+++ b/templates/Dash2.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-
 <base target="_self">
-  <div id="mapwin" class="innertube">
-			<h1>elecTrek - The Canvassing App</h1>
-      <h1>Welcome to your dashboard, {{ session['username'] }}</h1>
-    <iframe name="iframe1" src="{{ context.mapfile }}" width="1200" height="800"> </iframe>
-	</div>
+<div id="mapwin" class="innertube">
+{% block body %}
+{% endblock %}
+</div>
 
 			<div id="nav" class="innertube">
 
