--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -103,7 +103,7 @@
             var li = document.createElement("li");
             li.appendChild(document.createTextNode(pessages));
             ul.appendChild(li);
-            alert("_____onmessage:"+pessages);
+            alert("_____onmessage: "+e.data);
 
         });
 
