--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -42,9 +42,45 @@
 				{% for x in context.layernodelist %}
 						<ul> {{ x.tagno | int}} | {{ x.value }} </ul>
 				{% endfor %}
-
-
 		</div>
+    <div id-"datawin" class="innertube">
+      <table id="data-table">
+        <thead>
+        <tr><th colspan='10' style='font-weight: bold;font-size: 9pt;text-align: center;border-left: 0px;border-right: 0px;border-top: 0px;'>
+          ELECTORAL DATA TABLE</th>
+         </tr>
+        <tr>
+        <th class="centred" colspan='4' >Elector</th>
+        <th class="centred" colspan='4'>Address</th>
+        <th class="AV">A.V.</th>
+        <th class="VI">V.I.</th>
+        <th class="NS">Notes</th>
+      </tr>
+
+        </thead>
+        <tbody>
+          {% for index,row in allelectors.iterrows() %}
+        <tr>
+          <td class="c1">{{ row['PD'] }}</td>
+          <td class="c2">{{ row['ENO'] }}</td>
+          <td class="c3">{{ row['Suffix'] }}</td>
+          <td class="c4">{{ row['ElectorName'] }}</td>
+          <td class="C5">{{ row['AddressNumber'] }}</td>
+          <td class="C6">{{ row['AddressPrefix'] }}</td>
+          <td class="C7">{{ row['StreetName'] }}</td>
+          <td class="C8">{{ row['Postcode'] }}</td>
+          <td class="AV">{{ row['AV'] }} </td>
+          <td class="VI">{{ row['AV'] }} </td>
+          <td class="NS">{{ row['AV'] }} </td>
+
+        </tr>
+          {% endfor %}
+      </tbody>
+      <tfoot>
+
+      </tfoot>
+      </table>
+    </div>
 	<script>
 			    function setActionForm(action){
 			      let form = document.getElementById("normal-file")
