--- a/templates/Dash1.html
+++ b/templates/Dash1.html
@@ -59,7 +59,7 @@
 
         </thead>
         <tbody>
-          {% for index,row in allelectors.iterrows() %}
+          {% for index,row in context.allelectors.iterrows() %}
         <tr>
           <td class="c1">{{ row['PD'] }}</td>
           <td class="c2">{{ row['ENO'] }}</td>
