--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <!-- Template by Guildfoss.com -->
 <html lang="en">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="stylesheet" href = {{ url_for('static', filename='style.css') }} media="screen"/>
   <link rel="stylesheet" href = {{ url_for('static', filename='print.css') }} media="print"/>
-
-  <title>elecTrek</title>
 </head>
 <body>
-
-  {% block body %}
-
+  {% block mapwin %}
+  {{ mapwin }}
   {% endblock %}
+
+  {% block navwin %}
+    {{ navwin }}
+  {% endblock %}
+
+  {% block logwin %}
+    {{ logwin }}
+  {% endblock %}
+
+  {% block datawin %}
+    {{ datawin }}
+  {% endblock %}
+
 </body>
 
 
