--- a/templates/captains.html
+++ b/templates/captains.html
@@ -1,6 +1,7 @@
-{% extends "dash1.html" %}
-{% block datawin %}
-	<title>V3.3 elecTrek Captains Table</title>
+{% extends "Dash0.html" %}
+<title>V3.3 elecTrek Captains Table</title>
+
+{% block data %}
 
 	<div id="datawin" >
 	    <table id="captains-table">
