--- a/templates/captains.html
+++ b/templates/captains.html
@@ -15,7 +15,7 @@
 	      <th class="c1">Mobile</th>
 	    </tr>
 	      </thead>
-				<tbody style="height: 100px;">
+				<tbody style="height: 70px">
 					{% for index,row in context.group.iterrows() %}
 	      <tr>
 	        <td class="c1">{{ row['CC'] }}</td>
