--- a/templates/rolldata.html
+++ b/templates/rolldata.html
@@ -14,7 +14,7 @@
       </tr>
 
         </thead>
-        <tbody>
+        <tbody style="height: 70px">
           {% if context.allelectors | length > 0 %}
           {% for index,row in context.allelectors.iterrows() %}
         <tr>
