--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -40,7 +40,7 @@
       var li = parent.document.createElement("li");
       li.appendChild(parent.document.createTextNode(old+":completed"));
       ul.appendChild(li);
-      var tab = parent.document.getElementById("data-table");
+      var tab = parent.document.getElementById("datawin");
       tab.focus();
       alert(tab.id);
 
